services/gatekeeper/3.8.1/constrainttemplates/delete-protection-constrainttemplate.yaml
apiVersion: templates.gatekeeper.sh/v1beta1
kind: ConstraintTemplate
metadata:
  name: deleteprotection
  annotations:
    description: Protects the given resource from getting deleted.
spec:
  crd:
    spec:
      names:
        kind: DeleteProtection
  targets:
    - target: admission.k8s.gatekeeper.sh
      rego: |
        package deleteprotection
        violation[{"msg": msg}] {
          input.review.operation == "DELETE"
          msg := "resource cannot be deleted"
        }
